--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
                 <exclude>src/test/resources/**</exclude>
                 <exclude>**/dir.empty</exclude>
                 <exclude>.editorconfig</exclude>
-                <exclude>jitpack.yaml</exclude>
+                <exclude>jitpack.yml</exclude>
               </excludes>
             </licenseSet>
           </licenseSets>
