build: exclude renovate.json5 from maven-license-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
                 <exclude>**/dir.empty</exclude>
                 <exclude>.editorconfig</exclude>
                 <exclude>jitpack.yml</exclude>
+                <exclude>renovate.json5</exclude>
               </excludes>
             </licenseSet>
           </licenseSets>
