--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,11 +19,11 @@ jobs:
         with:
           # Useful for SonarCloud Scans
           fetch-depth: 0
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          java-version: 17
+          distribution: temurin
           cache: maven
       - name: Build & Test
         run: mvn ${{ env.MAVEN_CLI_OPTS }} install
