--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,15 +18,17 @@ body:
   - type: textarea
     attributes:
       label: Steps to reproduce
-      description: This may include a screenshot, a video, or detailed instructions to help reconstruct the issue.
+      description: >-
+        This may include a screenshot, a video, or detailed instructions to help
+        reconstruct the issue.
     validations:
       required: true
 
   - type: textarea
     attributes:
       label: Other
-      description: |
-        Please include other helpful information below.
-        The more information we receive, the quicker and more effective we can be at finding the solution to the issue.
+      description: >-
+        Please include other helpful information below. The more information we receive,
+        the quicker and more effective we can be at finding the solution to the issue.
     validations:
       required: false
