--- a/.gitattributes
+++ b/.gitattributes
@@ -1,26 +1,9 @@
-# Taken from https://github.com/dotnet/corefx/blob/master/.gitattributes
-# Helpful article: https://rehansaeed.com/gitattributes-best-practices/
+# Documentation: https://www.git-scm.com/docs/gitattributes
 
 # Set default behavior to automatically normalize line endings.
-* text eol=lf
+* text=auto eol=lf
 
 # Force batch scripts to always use CRLF line endings so that if a repo is accessed
 # in Windows via a file share from Linux, the scripts will work.
 *.{cmd,[cC][mM][dD]} text eol=crlf
 *.{bat,[bB][aA][tT]} text eol=crlf
-
-# Force bash scripts to always use LF line endings so that if a repo is accessed
-# in Unix via a file share from Windows, the scripts will work.
-*.sh text eol=lf
-
-# Binaries
-*.ico binary
-*.png binary
-*.gif binary
-*.jar binary
-*.nofilter binary
-*.kdbx binary
-*.exe binary
-*.dll binary
-*.zip binary
-*.tar.gz binary
