--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
             objects.githubusercontent.com:443
             uploads.github.com:443
             repo.maven.apache.org:443
+            s01.oss.sonatype.org:443
             jitpack.io:443
             repo.papermc.io:443
             api.nuget.org:443
@@ -57,20 +58,30 @@ jobs:
           cache: npm
           cache-dependency-path: .github/package-lock.json
 
+      - name: Install semantic-release
+        working-directory: .github/
+        run: npm clean-install
+
       - name: Setup Java
         uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
         with:
           java-version: 17
           distribution: temurin
-
-      - name: Install semantic-release
-        working-directory: .github/
-        run: npm clean-install
+          cache: maven
+          server-id: ossrh
+          server-username: OSSRH_USERNAME
+          server-password: OSSRH_TOKEN
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: GPG_PASSPHRASE
 
       - name: Release
         id: release
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          # Maven releasing-related properties
+          OSSRH_USERNAME: cEK6DM3d
+          OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           # Hacky way of retrieving the released version tag name through a temporary file
           TMP_TAG_VERSION_NAME_FILE: ${{ runner.temp }}/tag_version_name
         working-directory: .github/
