--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,6 @@
                     <artifactId>maven-install-plugin</artifactId>
                     <version>3.1.1</version>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
 
                 <!-- Formatting-related plugins -->
                 <plugin>
@@ -183,8 +178,10 @@
                             </requireMavenVersion>
                             <requirePluginVersions>
                                 <message>Best Practice is to always define plugin versions!</message>
+                                <!-- The Nexus one replaces the Maven deploy plugin -->
                                 <!-- "site" phase is not applicable for this project -->
-                                <unCheckedPluginList>org.apache.maven.plugins:maven-site-plugin</unCheckedPluginList>
+                                <unCheckedPluginList>org.apache.maven.plugins:maven-deploy-plugin,
+                                    org.apache.maven.plugins:maven-site-plugin</unCheckedPluginList>
                             </requirePluginVersions>
                             <requireUpperBoundDeps />
                         </rules>
@@ -237,6 +234,17 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.13</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
                 </plugin>
 
                 <!-- SonarCloud code quality scans -->
