--- a/pom.xml
+++ b/pom.xml
@@ -412,7 +412,7 @@
     <scm>
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
-        <url>git@github.com:Djaytan/bukkit-slf4j.git</url>
+        <url>https://github.com/Djaytan/bukkit-slf4j.git</url>
     </scm>
 
     <issueManagement>
