feat!: rework completely the library internally

--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,6 @@
         <!-- Default properties -->
         <format.perform.skip>false</format.perform.skip>
         <format.check.skip>true</format.check.skip>
-
-        <!-- ==================== Dependencies versions ==================== -->
-        <version.mockito>5.10.0</version.mockito>
     </properties>
 
     <dependencies>
@@ -73,21 +70,27 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.25.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${version.mockito}</version>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>3.15.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${version.mockito}</version>
+            <groupId>com.jparams</groupId>
+            <artifactId>to-string-verifier</artifactId>
+            <version>1.4.8</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
