--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -36,6 +36,7 @@ jobs:
             rekor.sigstore.dev:443
             fulcio.sigstore.dev:443
             tuf-repo-cdn.sigstore.dev:443
+            api.deps.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
