--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -37,6 +37,7 @@ jobs:
             fulcio.sigstore.dev:443
             tuf-repo-cdn.sigstore.dev:443
             api.deps.dev:443
+            api.scorecard.dev:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
