ci(release): adjust Maven publishing settings

--- a/pom.xml
+++ b/pom.xml
@@ -278,9 +278,9 @@
           <extensions>true</extensions>
           <configuration>
             <publishingServerId>central</publishingServerId>
-            <tokenAuth>true</tokenAuth>
             <autoPublish>true</autoPublish>
             <waitUntil>published</waitUntil>
+            <deploymentName>${project.artifactId}</deploymentName>
           </configuration>
         </plugin>
 
