--- a/pom.xml
+++ b/pom.xml
@@ -460,6 +460,13 @@
     <url>https://github.com/Djaytan/bukkit-slf4j/actions</url>
   </ciManagement>
 
+  <distributionManagement>
+    <repository>
+      <id>central</id>
+      <url>https://central.sonatype.com</url>
+    </repository>
+  </distributionManagement>
+
   <profiles>
     <profile>
       <id>ci</id>
