--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
           <artifactId>maven-install-plugin</artifactId>
           <version>3.1.3</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>3.1.2</version>
+        </plugin>
 
         <!-- Formatting-related plugins -->
         <plugin>
@@ -214,10 +219,8 @@
               </requireMavenVersion>
               <requirePluginVersions>
                 <message>Best Practice is to always define plugin versions!</message>
-                <!-- The Nexus one replaces the Maven deploy plugin -->
                 <!-- "site" phase is not applicable for this project -->
-                <unCheckedPluginList>org.apache.maven.plugins:maven-deploy-plugin,
-                                    org.apache.maven.plugins:maven-site-plugin</unCheckedPluginList>
+                <unCheckedPluginList>org.apache.maven.plugins:maven-site-plugin</unCheckedPluginList>
               </requirePluginVersions>
               <requireUpperBoundDeps />
             </rules>
@@ -462,9 +465,13 @@
 
   <distributionManagement>
     <repository>
-      <id>central</id>
-      <url>https://central.sonatype.com</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
   </distributionManagement>
 
   <profiles>
