ci(release): adjust Maven deployment name by including version

--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,7 @@
               <publishingServerId>central</publishingServerId>
               <autoPublish>true</autoPublish>
               <waitUntil>published</waitUntil>
-              <deploymentName>${project.artifactId}</deploymentName>
+              <deploymentName>${project.build.finalName}</deploymentName>
             </configuration>
           </plugin>
         </plugins>
