--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
   <version>0.0.1-DEV-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Bukkit SLF4J</name>
-  <description>The SLF4J implementation for Bukkit</description>
+  <name>Bukkit SLF4J Bridge</name>
+  <description>SLF4J bridge to Bukkit's logger for plugins</description>
 
   <properties>
     <!-- ==================== General ==================== -->
