ci(release): move semantic-release files to dedicated folder

--- a/.github/semantic-release/package.json
+++ b/.github/semantic-release/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "continuous-integration",
+  "name": "semantic-release",
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
