--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ on:
 
 permissions: {}
 
+env:
+  MAVEN_ARGS: --batch-mode -Dstyle.color=always
+
 jobs:
   build-and-test:
     name: Build & Test
@@ -73,7 +76,7 @@ jobs:
           SONAR_ORGANIZATION="$(echo '${{ github.repository_owner }}' | awk '{print tolower($0)}')"
           SONAR_PROJECT_KEY="$(echo '${{ github.repository }}' | sed 's/\//_/')"
 
-          ./mvnw verify sonar:sonar --batch-mode -Dstyle.color=always \
+          ./mvnw verify sonar:sonar \
             -Dsonar.host.url="${SONAR_HOST_URL}" \
             -Dsonar.organization="${SONAR_ORGANIZATION}" \
             -Dsonar.projectKey="${SONAR_PROJECT_KEY}"
@@ -122,7 +125,7 @@ jobs:
           languages: java
 
       - name: Build
-        run: ./mvnw package --batch-mode -Dstyle.color=always -DskipTests
+        run: ./mvnw package -DskipTests
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3.28.0
