--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,5 +69,6 @@ jobs:
           CENTRAL_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
           CENTRAL_TOKEN: ${{ secrets.CENTRAL_TOKEN }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          MAVEN_ARGS: --batch-mode -Dstyle.color=always
         working-directory: .github/semantic-release/
         run: npx --no-install semantic-release
