--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,6 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{diff,md,properties,conf}]
+# Prevent line-ending removal in Markdown files (two trailing spaces = new line)
+[*.md]
 trim_trailing_whitespace = false
