--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,7 +2,7 @@
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   extends: [
     'config:best-practices',
-    'schedule:quarterly',
+    'schedule:monthly',
     'security:openssf-scorecard',
     'workarounds:mavenCommonsAncientVersion'
   ],
