--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,7 +13,7 @@
   lockFileMaintenance: {
     enabled: true,
     extends: [
-      'schedule:quarterly'
+      'schedule:monthly'
     ]
   },
   osvVulnerabilityAlerts: true,
