--- a/.github/release/package.json
+++ b/.github/release/package.json
@@ -4,11 +4,8 @@
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "semantic-release": "24.2.5",
-    "@semantic-release/exec": "7.1.0"
-  },
-  "overrides": {
-    "conventional-changelog-conventionalcommits_": "Temporary workaround: https://github.com/semantic-release/release-notes-generator/issues/657",
-    "conventional-changelog-conventionalcommits": ">= 8.0.0"
+    "@semantic-release/exec": "7.1.0",
+    "conventional-changelog-conventionalcommits": "9.0.0"
   },
   "engines": {
     "node": "^22.0.0"
