--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,7 @@ jobs:
             auth.docker.io:443
             registry-1.docker.io:443
             production.cloudflare.docker.com:443
-            sonarcloud.io:443
-            scanner.sonarcloud.io:443
+            *.sonarcloud.io:443
             ea6ne4j2sb.execute-api.eu-central-1.amazonaws.com:443
             sc-cleancode-sensorcache-eu-central-1-prod.s3.amazonaws.com:443
 
