--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,16 +32,15 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             github.com:443
-            api.github.com:443
-            objects.githubusercontent.com:443
+            *.github.com:443
+            *.githubusercontent.com:443
             repo.maven.apache.org:443
             jitpack.io:443
             repo.papermc.io:443
             api.nuget.org:443
             registry.npmjs.org:443
-            auth.docker.io:443
-            registry-1.docker.io:443
-            production.cloudflare.docker.com:443
+            *.docker.io:443
+            *.docker.com:443
             *.sonarcloud.io:443
             ea6ne4j2sb.execute-api.eu-central-1.amazonaws.com:443
             sc-cleancode-sensorcache-eu-central-1-prod.s3.amazonaws.com:443
@@ -98,8 +97,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             github.com:443
-            api.github.com:443
-            uploads.github.com:443
+            *.github.com:443
             *.githubusercontent.com
             repo.maven.apache.org:443
             jitpack.io:443
