--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,8 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             github.com:443
-            api.github.com:443
-            objects.githubusercontent.com:443
-            uploads.github.com:443
+            *.github.com:443
+            *.githubusercontent.com:443
             repo.maven.apache.org:443
             central.sonatype.com:443
             jitpack.io:443
