--- a/.github/workflows/openssf.yml
+++ b/.github/workflows/openssf.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   branch_protection_rule:
   push:
-    branches: [main, '+.x', next, next-major, beta, alpha]
+    branches: [main, '+.x', beta, alpha]
   schedule:
     - cron: '24 3 * * *' # At 03:24 every day
 
